--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -182,6 +182,10 @@ h3 {
     color: white
 }
 
+.btn-primary,.btn-primary-vr1,.btn-primary-ghost {
+    font-family: Source Sans Pro;
+}
+
 .btn-primary {
     width: 10vw;
     background-color: var(--azul-axa);
@@ -196,7 +200,7 @@ h3 {
     padding: 0 25px;
     letter-spacing: 1px;
     transition: 0.5s;
-    cursor: pointer
+    cursor: pointer;
 }
 
 
@@ -216,6 +220,34 @@ h3 {
     letter-spacing: 1px;
     transition: 0.5s;
     cursor: pointer
+}
+
+/* ghost */
+
+.btn-primary-ghost{
+    width: 10vw;
+    background: none;
+    border: 2.5px solid #00008f;
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 45px;
+    font-size: 15px;
+    display: inline-block;
+    padding: 0 25px;
+    letter-spacing: 1px;
+    cursor: pointer;
+    transition: 0.5s;
+    
+}
+
+.btn-primary-ghost:hover{
+    border: 2.5px solid #00008f;
+    background: #00008f;
+    color: #fff;
+    transition: 0.5s;
 }
 
 
