--- a/src/assets/css/style-axa.css
+++ b/src/assets/css/style-axa.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: 'axa';
   src:  url('fonts/axa.eot?9syd3i');
   src:  url('fonts/axa.eot?9syd3i#iefix') format('embedded-opentype'),
@@ -8,7 +8,7 @@
   font-weight: normal;
   font-style: normal;
   font-display: block;
-}
+} */
 
 [class^="icon-axa-"], [class*=" icon-axa-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
