--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -54,7 +54,7 @@
     --h1-title-size: 48px;
     --h1-title-height: 54px;
 
-    --h2-title-size: 26px;
+    --h2-title-size: 1.6em;
     --h2-title-height: 40.5px;
 
     --h3-title-size: 28px;
@@ -182,7 +182,9 @@ h3 {
     color: white
 }
 
-.btn-primary,.btn-primary-vr1,.btn-primary-ghost {
+.btn-primary,
+.btn-primary-vr1,
+.btn-primary-ghost {
     font-family: Source Sans Pro;
 }
 
@@ -208,7 +210,7 @@ h3 {
     width: 10vw;
     background-color: #4976ba;
     color: var(--blanco);
-    border:2px solid var(--blanco);
+    border: 2px solid var(--blanco);
     width: auto;
     text-decoration: none;
     text-transform: uppercase;
@@ -219,12 +221,20 @@ h3 {
     padding: 0 25px;
     letter-spacing: 1px;
     transition: 0.5s;
-    cursor: pointer
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.btn-primary-vr1:hover {
+    background-color: var(--blanco);
+    color: #4976ba;
+    border: 2px solid #4976ba;
+    transition: 0.5s;
 }
 
 /* ghost */
 
-.btn-primary-ghost{
+.btn-primary-ghost {
     width: 10vw;
     background: none;
     border: 2.5px solid #00008f;
@@ -240,10 +250,10 @@ h3 {
     letter-spacing: 1px;
     cursor: pointer;
     transition: 0.5s;
-    
+
 }
 
-.btn-primary-ghost:hover{
+.btn-primary-ghost:hover {
     border: 2.5px solid #00008f;
     background: #00008f;
     color: #fff;
