--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -487,19 +487,89 @@ h3 {
     }
 }
 
-/*   #app{
-      position:absolute;
-      top:10%
-  } */
+/* 
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
 
-@media only screen and (max-width: 600px) {
-    body {
-        border: 1px solid green
+@media (min-width: 1281px) {
+
+    /* CSS */
+    .container-ruleta {
+        border: 4px solid rgb(20, 196, 49)
+    }
+
+    .ruleta {
+        width: 53rem;
+        height: 36rem;
+    }
+
+}
+
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+
+    /* CSS */
+    .container-ruleta {
+        border: 3px solid blue
     }
 }
 
+/* 
+  ##Device = Tablets, Ipads (portrait)
+  ##Screen = B/w 768px to 1024px
+*/
 
+@media (min-width: 768px) and (max-width: 1024px) {
 
+    /* CSS */
+    .container-ruleta {
+        border: 3px solid red
+    }
+}
 
+/* 
+  ##Device = Tablets, Ipads (landscape)
+  ##Screen = B/w 768px to 1024px
+*/
 
-@media screen and (min-width: 80em) {}
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+
+    /* CSS */
+    .container-ruleta {
+        border: 3px solid orange
+    }
+
+}
+
+/* 
+  ##Device = Low Resolution Tablets, Mobiles (Landscape)
+  ##Screen = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {
+
+    /* CSS */
+    .container-ruleta {
+        border: 3px solid purple
+    }
+
+}
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+
+    /* CSS */
+    .container-ruleta {
+        border: 3px solid teal
+    }
+
+}
