--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -170,7 +170,8 @@ h2 {
     font-family: Source Sans Pro;
     font-size: var(--h2-title-size);
     line-height: var(--h2-title-height);
-    color: white
+    color: white;
+    font-weight: normal;
 }
 
 h3 {
