--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -231,7 +231,7 @@ h3 {
 
 /* ghost */
 
-.btn-primary-ghost {
+/* .btn-primary-ghost {
     background: none;
     border: 2.5px solid #00008f;
     color: #fff;
@@ -254,7 +254,204 @@ h3 {
     background: #00008f;
     color: #fff;
     transition: 0.5s;
+} */
+
+.btn-primary-ghost{
+    align-items: center;
+    border-color: #000072;
+    border-radius: 0;
+    border-style: solid;
+    border-width: 0 0 2px 0;
+    color: #fff;
+    cursor: pointer;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    font: normal 600 14px/14px "Source Sans Pro", Arial, sans-serif;
+    -ms-flex-align: center;
+    -ms-flex-pack: center;
+    min-height: 40px;
+    justify-content: center;
+    letter-spacing: .05em;
+    outline: 0;
+    overflow: hidden;
+    padding: 0 20px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    -webkit-transition: all 195ms cubic-bezier(.4, 0, 1, 1);
+    -moz-transition: all 195ms cubic-bezier(.4, 0, 1, 1);
+    -ms-transition: all 195ms cubic-bezier(.4, 0, 1, 1);
+    transition: all 195ms cubic-bezier(.4, 0, 1, 1);
+    user-select: none;
+    vertical-align: middle;
+    z-index: 0
 }
+
+.btn-ghost-white:active {
+    background-color: #00008f;
+    color: #fff
+}
+
+.btn-ghost-white:hover {
+    background-color: transparent;
+    color: #fff;
+    text-decoration: none
+}
+
+.btn-ghost-white:focus {
+    background-color: #00008f;
+    color: #fff
+}
+
+.btn-ghost-white:disabled {
+    background-color: #e5e5e5;
+    border-color: #ccc;
+    cursor: not-allowed;
+    transition: none
+}
+
+.btn-ghost-white:disabled:hover:after,
+.btn-ghost-white:disabled:hover:before {
+    display: none;
+    transition: none
+}
+
+.btn-ghost-white:after {
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    background-color: #fff;
+    content: "";
+    height: 530px;
+    left: 50%;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translate3d(-50%, -50%, 0) rotate(37.6deg);
+    -moz-transform: translate3d(-50%, -50%, 0) rotate(37.6deg);
+    -ms-transform: translate3d(-50%, -50%, 0) rotate(37.6deg);
+    transform: translate3d(-50%, -50%, 0) rotate(37.6deg);
+    -webkit-transition: width .3s, opacity .3s;
+    -moz-transition: width .3s, opacity .3s;
+    -ms-transition: width .3s, opacity .3s;
+    transition: width .3s, opacity .3s;
+    width: 0;
+    z-index: -1;
+}
+
+
+@media(pointer:fine) {
+    .btn-ghost-white:active,
+    .btn-ghost-white:focus,
+    .btn-ghost-white:hover {
+        color: #fff
+    }
+
+    .btn-ghost-white:active:after,
+    .btn-ghost-white:focus:after,
+    .btn-ghost-white:hover:after {
+        opacity: 1;
+        width: 110%
+    }
+}
+
+.btn-block.btn-primary-ghost{
+    box-sizing: border-box;
+    width: 100%
+}
+
+.btn-md.btn-primary-ghost{
+    font-size: 14px;
+    height: 40px
+}
+
+.btn-sm.btn-primary-ghost{
+    font-size: 14px;
+    height: 30px;
+    padding-top: 1px
+}
+
+.btn-primary-ghost{
+    background-color: transparent;
+    border: solid 2px #00008f;
+    color: #00008f
+}
+
+
+.btn-sm.btn-primary-ghost{
+    padding-top: 0
+}
+
+.btn-arrow:active.btn-ghost-white:before,
+.btn-arrow:focus.btn-ghost-white:before,
+.btn-arrow:hover.btn-ghost-white:before,
+.btn-ghost.btn-icon:active.btn-ghost-white:before,
+.btn-ghost.btn-icon:focus.btn-ghost-white:before,
+.btn-ghost.btn-icon:hover.btn-ghost-white:before,
+.btn-icon:active.btn-ghost-white:before,
+.btn-icon:focus.btn-ghost-white:before,
+.btn-icon:hover.btn-ghost-white:before {
+    border-left-color: #00008f
+}
+
+.btn-arrow.btn-ghost-white:before,
+.btn-ghost-white.btn-arrow:before,
+.btn-icon.btn-ghost-white:before {
+    font-weight: 600;
+    line-height: 37px
+}
+
+.btn-arrow.btn-sm.btn-ghost-white:before,
+.btn-icon.btn-sm.btn-ghost-white:before,
+.btn-sm.btn-ghost-white.btn-arrow:before {
+    line-height: 27px
+}
+
+.btn-primary-ghostsvg {
+    fill: currentColor
+}
+
+.btn-ghost-white:active,
+.btn-ghost-white:focus,
+.btn-ghost-white:hover {
+    border-color: #000072;
+    color: #000072
+}
+
+@media(pointer:fine) {
+    .btn-ghost-white:active,
+    .btn-ghost-white:focus,
+    .btn-ghost-white:hover {
+        border-color: #fff;
+        color: #00008f
+    }
+    .btn-ghost-white:active:after,
+    .btn-ghost-white:focus:after,
+    .btn-ghost-white:hover:after {
+        opacity: 1;
+        width: 110%
+    }
+}
+
+.btn-primary-ghost{
+    background-color: transparent;
+    border-color: #fff;
+    color: #fff
+}
+
+.btn-block {
+    box-sizing: border-box;
+    width: 100%
+}
+
+.btn-small {
+    min-height:30px;
+}
+
+.btn-large {
+    min-height:50px;
+}
+
 
 
 
